--- a/app/src/main/res/layout/fragment_profile_donates.xml
+++ b/app/src/main/res/layout/fragment_profile_donates.xml
@@ -5,6 +5,8 @@
 
     <ListView
         android:id="@+id/listView"
+        android:divider="@null"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
