--- a/app/src/main/res/layout/fragment_connections.xml
+++ b/app/src/main/res/layout/fragment_connections.xml
@@ -5,6 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cm.com.newdon.fragments.ProfileFragment">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="12dp"
+        android:layout_height="48dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:textSize="15dp"
+            android:textColor="#5d9bff"
+            android:text="Find Connections"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="48dp"
+            android:id="@+id/finishbtn"
+            android:src="@drawable/finish_btn"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
 
     <LinearLayout
         android:orientation="horizontal"
