--- a/app/src/main/res/layout/activity_lottery.xml
+++ b/app/src/main/res/layout/activity_lottery.xml
@@ -38,7 +38,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/header">
+        android:layout_below="@+id/header"
+        android:nestedScrollingEnabled="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -95,12 +96,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="My Tickets"
+                    android:text="  My Tickets"
                     android:textColor="@color/grey" />
 
                 <ListView
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="match_parent"
                     android:id="@+id/lvTickets">
                 </ListView>
 
