--- a/app/src/main/res/layout/facebook.xml
+++ b/app/src/main/res/layout/facebook.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fb="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="#fff"
     android:layout_height="match_parent">
 
 
@@ -13,7 +14,7 @@
         android:id="@+id/fbLogin"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="80dp"
         facebook:com_facebook_login_text=""
         android:layout_marginRight="15dp"
         style="@style/FacebookLoginButton"/>
