--- a/app/src/main/res/layout/fragment_connections.xml
+++ b/app/src/main/res/layout/fragment_connections.xml
@@ -109,10 +109,29 @@
         <!--android:id="@+id/tvNoNotifications"-->
         <!--android:text="No any notifications yet"/>-->
 
-    <ListView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/lvConnections">
-    </ListView>
+        android:layout_height="wrap_content">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lvConnections">
+        </ListView>
+        <com.facebook.login.widget.LoginButton
+            xmlns:facebook="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:id="@+id/facebook"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="36dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:visibility="invisible"
+            facebook:com_facebook_login_text=""
+            style="@style/FacebookConnButton"/>
+
+
+    </RelativeLayout>
+
 
 </LinearLayout>
