--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,11 @@
         <item name="android:paddingTop">20sp</item>
         <item name="android:paddingBottom">20sp</item>
     </style>
+    <style name="FacebookConnButton">
+        <item name="android:background">@drawable/fb_connect_btn</item>
+        <item name="android:paddingTop">20sp</item>
+        <item name="android:paddingBottom">20sp</item>
+    </style>
     <style name="dividedListStyle" parent="@android:style/Widget.ListView">
         <item name="android:cacheColorHint">@android:color/transparent</item>
         <item name="android:divider">@drawable/keyline</item>
